--- a/fiap-cloud-game-api.AppHost/fiap-cloud-game-api.AppHost.csproj
+++ b/fiap-cloud-game-api.AppHost/fiap-cloud-game-api.AppHost.csproj
@@ -16,6 +16,8 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0" />
+    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="8.2.2" />
+    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.2.2" />
   </ItemGroup>
 
 </Project>
