--- a/fiap-cloud-game-api.ApiService/FCG.Api.csproj
+++ b/fiap-cloud-game-api.ApiService/FCG.Api.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\fiap-cloud-game-api.ServiceDefaults\fiap-cloud-game-api.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\fiap-cloud-game-api.ServiceDefaults\FCG.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
