--- a/fiap-cloud-game-api.AppHost/FCG.Host.csproj
+++ b/fiap-cloud-game-api.AppHost/FCG.Host.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\fiap-cloud-game-api.ApiService\fiap-cloud-game-api.ApiService.csproj" />
+    <ProjectReference Include="..\fiap-cloud-game-api.ApiService\FCG.Api.csproj" />
     <ProjectReference Include="..\fiap-cloud-game-api.Web\fiap-cloud-game-api.Web.csproj" />
   </ItemGroup>
 
