#4: refactor(reorganização da FGC.Application que ficou pendente)

--- a/fiap-cloud-game-api.AppHost/FCG.Host.csproj
+++ b/fiap-cloud-game-api.AppHost/FCG.Host.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\fiap-cloud-game-api.ApiService\FCG.Api.csproj" />
-    <ProjectReference Include="..\fiap-cloud-game-api.Web\fiap-cloud-game-api.Web.csproj" />
+    <ProjectReference Include="..\fiap-cloud-game-api.Web\FCG.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
