--- a/.aspire/settings.json
+++ b/.aspire/settings.json
@@ -1,3 +1,3 @@
 {
-  "appHostPath": "../fiap-cloud-game-api.AppHost/fiap-cloud-game-api.AppHost.csproj"
+  "appHostPath": "../FCG.Host/FCG.Host.csproj"
 }
