#5 refactor(ajustes de estrutura infra, addd seeds, add user admins)

--- a/FCG.Host/FCG.Host.csproj
+++ b/FCG.Host/FCG.Host.csproj
@@ -25,7 +25,9 @@
   <ItemGroup>
     <ProjectReference Include="..\FCG.Api\FCG.Api.csproj" />
     <ProjectReference Include="..\FCG.Blazor\FCG.Blazor.csproj" />
-    <ProjectReference Include="..\FCG.Infrastructure\FCG.Infrastructure.csproj" />
+	<ProjectReference Include="..\FCG.Infrastructure\FCG.Infrastructure.csproj">
+		<IsAspireProjectResource>false</IsAspireProjectResource>
+	</ProjectReference>	  
   </ItemGroup>
 
   <Target Name="CopyInfrastructureDll" AfterTargets="Build">
