--- a/FCG.Api/FCG.Api.csproj
+++ b/FCG.Api/FCG.Api.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FCG.Application\FCG.Application.csproj" />
     <ProjectReference Include="..\FCG.Infrastructure\FCG.Infrastructure.csproj" />
   </ItemGroup>
 
