--- a/FCG.Application/FCG.Application.csproj
+++ b/FCG.Application/FCG.Application.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FCG.Domain\FCG.Domain.csproj" />
+  </ItemGroup>
 </Project>
