--- a/FCG.Api/appsettings.json
+++ b/FCG.Api/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Jwt": {
+    "SecretKey": "SUA_CHAVE_SECRETA_SUPER_SEGURA_MÍNIMO_32_CHARACTERES_AQUI",
+    "Issuer": "FCG.Api",
+    "Audience": "FCG.Client",
+    "ExpireMinutes": 60,
+    "RefreshTokenExpireDays": 7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
