#5 #7 #26 #25 #9 #11 #13 Fetaures(varias implementações)

--- a/FCG.Api/appsettings.json
+++ b/FCG.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Postgres": "Host=localhost;Database=YourDatabase;Username=YourUsername;Password=YourPassword"
+  },
   "Jwt": {
     "SecretKey": "SUA_CHAVE_SECRETA_SUPER_SEGURA_MÍNIMO_32_CHARACTERES_AQUI",
     "Issuer": "FCG.Api",
