--- a/FCG.Host/FCG.Host.csproj
+++ b/FCG.Host/FCG.Host.csproj
@@ -24,6 +24,7 @@
 	
   <ItemGroup>
     <ProjectReference Include="..\FCG.Api\FCG.Api.csproj" />
+    <ProjectReference Include="..\FCG.Application\FCG.Application.csproj" />
     <ProjectReference Include="..\FCG.Blazor\FCG.Blazor.csproj" />
 	<ProjectReference Include="..\FCG.Infrastructure\FCG.Infrastructure.csproj">
 		<IsAspireProjectResource>false</IsAspireProjectResource>
