--- a/FCG.Api/appsettings.json
+++ b/FCG.Api/appsettings.json
@@ -3,7 +3,7 @@
     "Postgres": "Host=localhost;Database=YourDatabase;Username=YourUsername;Password=YourPassword"
   },
   "Jwt": {
-    "SecretKey": "SUA_CHAVE_SECRETA_SUPER_SEGURA_MÍNIMO_32_CHARACTERES_AQUI",
+    "SecretKey": "ch@v&de#teste123",
     "Issuer": "FCG.Api",
     "Audience": "FCG.Client",
     "ExpireMinutes": 60,
