--- a/FCG.Api/appsettings.Development.json
+++ b/FCG.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "Jwt": {
-    "SecretKey": "SUA_CHAVE_SECRETA_SUPER_SEGURA_MÍNIMO_32_CHARACTERES_AQUI",
+    "SecretKey": "ch@v&de#teste321",
     "Issuer": "FCG.Api",
     "Audience": "FCG.Client",
     "ExpireMinutes": 60,
