--- a/FCG.Api/FCG.Api.csproj
+++ b/FCG.Api/FCG.Api.csproj
@@ -1,18 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.5" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.5" />
+		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.5.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\FCG.Application\FCG.Application.csproj" />
-    <ProjectReference Include="..\FCG.Infrastructure\FCG.Infrastructure.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\FCG.Application\FCG.Application.csproj" />
+		<ProjectReference Include="..\FCG.Infrastructure\FCG.Infrastructure.csproj" />
+	</ItemGroup>
 
 </Project>
