#5 #7 #11: fix(correçao de bugs, ajuste no login com JWT, ajuste da aplicação blazor para rodar no aspire)

--- a/FCG.Api/appsettings.Development.json
+++ b/FCG.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "Jwt": {
-    "SecretKey": "ch@v&de#teste321",
+    "SecretKey": "OGqWs9EWKN7CULiT+BgA8agGboPklR3qjjtgFzDkt6I=",
     "Issuer": "FCG.Api",
     "Audience": "FCG.Client",
     "ExpireMinutes": 60,
