--- a/FCG.Api/appsettings.json
+++ b/FCG.Api/appsettings.json
@@ -1,9 +1,6 @@
 {
-  "ConnectionStrings": {
-    "Postgres": "Host=localhost;Database=YourDatabase;Username=YourUsername;Password=YourPassword"
-  },
   "Jwt": {
-    "SecretKey": "ch@v&de#teste123",
+    "SecretKey": "8BhsVTN3d7b2YfLIGcb+3vGakIb3Q/LxDVCD9fcHM08=",
     "Issuer": "FCG.Api",
     "Audience": "FCG.Client",
     "ExpireMinutes": 60,
