--- a/FCG.Tests/FCG.Tests.csproj
+++ b/FCG.Tests/FCG.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
 	<PackageReference Include="Aspire.Hosting.Testing" Version="9.2.1" />
+	<PackageReference Include="Bogus" Version="35.6.4" />
 	<PackageReference Include="coverlet.collector" Version="6.0.2" />
 	<PackageReference Include="KubernetesClient" Version="17.0.14" />
 	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
@@ -19,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FCG.Host\FCG.Host.csproj" />
+    <ProjectReference Include="..\FCG.Domain\FCG.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
