--- a/FCG.Api/appsettings.json
+++ b/FCG.Api/appsettings.json
@@ -12,5 +12,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "db_delete": {
+    "database": true,
+    "schema": {
+      "identity": false,
+      "fcg": false
+    }
+  },
   "AllowedHosts": "*"
 }
