--- a/FCG.Domain/FCG.Domain.csproj
+++ b/FCG.Domain/FCG.Domain.csproj
@@ -19,6 +19,7 @@
 
 	<ItemGroup>
 	  <Folder Include="Data\Migrations\Default\" />
+	  <Folder Include="Data\Migrations\Identity\" />
 	</ItemGroup>
 
 </Project>
