--- a/FCG.Api/FCG.Api.csproj
+++ b/FCG.Api/FCG.Api.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.5" />
 		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.5.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="9.0.6" />
 	</ItemGroup>
 
 	<ItemGroup>
