--- a/FCG.Api/appsettings.json
+++ b/FCG.Api/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "db_delete": {
-    "database": false,
+    "database": true,
     "schema": {
       "identity": false,
       "fcg": false
